# pbp

./: Cargo.toml  Makefile
examples/: print.rs  read-sig.rs  read_sig.rs  round-trip.rs  round_trip.rs  verify-sig.rs  verify_sig.rs
src/: ascii_armor.rs  key.rs  lib.rs  packet.rs  sig.rs
