[package]
authors = ["Without Boats <boats@mozilla.com>"]
description = "bridge non-PGP system to PGP data format"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
name = "pbp"
version = "0.4.0"
repository = "https://github.com/withoutboats/pbp"

[dependencies]
base64 = "0.11"
byteorder = "1"
digest = "0.8"
sha1 = "0.6"
typenum = "1.11"
failure = "0.1"
bitflags = "1.2"
rand = "0.6"
sha2 = "0.8"

[dependencies.ed25519-dalek]
version = "0.9"
optional = true

[features]
dalek = ["ed25519-dalek"]

[dev-dependencies]
ed25519-dalek = "0.9"

[[example]]
required-features = ["dalek"]
name = "print"
path = "examples/print.rs"

[[example]]
required-features = ["dalek"]
name = "read_sig"
path = "examples/read_sig.rs"

[[example]]
required-features = ["dalek"]
name = "round_trip"
path = "examples/round_trip.rs"

[[example]]
required-features = ["dalek"]
name = "verify_sig"
path = "examples/verify_sig.rs"
