[package]
authors = ["Without Boats <boats@mozilla.com>"]
description = "Bridge Ed25519 file or PKCS #11 keys to PGP data format"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
name = "pbp"
version = "0.4.0"
repository = "https://github.com/nickray/pbp11"

[dependencies]
base64 = "0.13"
bitflags = "1.2"
digest = "0.9"
# can't update to 0.8, ed25519-dalek is on 0.7
rand = "0.7"
sha1 = "0.6"
sha2 = "0.9"
signature = "1.3"
thiserror = "1"
typenum = "1.11"

[dependencies.ed25519-dalek]
version = "1"
optional = true

[features]
dalek = ["ed25519-dalek"]

[dev-dependencies]
anyhow = "1"
ed25519-dalek = "1"

[[example]]
required-features = ["dalek"]
name = "print"
path = "examples/print.rs"

[[example]]
name = "read-sig"
path = "examples/read-sig.rs"

[[example]]
required-features = ["dalek"]
name = "round-trip"
path = "examples/round-trip.rs"

[[example]]
required-features = ["dalek"]
name = "verify-sig"
path = "examples/verify-sig.rs"
